Update and rename 2018-5-15-about.md to 2018-5-15-cv.md

--- a/_posts/2018-5-15-cv.md
+++ b/_posts/2018-5-15-cv.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: About
+title: cv
 ---
 
 I am a Data Scientist at OneAnalytix, Singapore. I finished my Ph.D. on information engineer from School of EEE, Nanyang Technological University (NTU), Singapore. My current work and research areas includes Big Data Analysis, Machine Learning, Recommendation and Prediction, Human Computer Interaction.
